--- a/lightgbm-model.ipynb
+++ b/lightgbm-model.ipynb
@@ -69,7 +69,8 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.model_selection import RandomizedSearchCV, cross_val_score\n",
         "from sklearn.ensemble import GradientBoostingClassifier\n",
-        "from tqdm import tqdm"
+        "from tqdm import tqdm\n",
+        "import warnings"
       ]
     },
     {
@@ -860,11 +861,6 @@
         }
       ],
       "source": [
-        "import warnings\n",
-        "from lightgbm import LGBMClassifier\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "import numpy as np\n",
-        "\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "def fit_model(model, X_train, y_train):\n",
